--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -29,12 +29,19 @@ jobs:
     
     - name: Run Playwright tests
       run: npx playwright test
+      continue-on-error: true
     
-    - name: Upload test results
+    - name: Check if reports exist
+      run: |
+        echo "Checking for test artifacts..."
+        ls -la playwright-report/ || echo "No playwright-report directory"
+        ls -la screenshots/ || echo "No screenshots directory"
+    
+    - name: Upload Playwright HTML Report
       if: always()
       uses: actions/upload-artifact@v4
       with:
-        name: playwright-report
+        name: playwright-html-report
         path: playwright-report/
         retention-days: 30
     
@@ -42,6 +49,42 @@ jobs:
       if: always()
       uses: actions/upload-artifact@v4
       with:
-        name: screenshots
+        name: test-screenshots
         path: screenshots/
         retention-days: 30
+    
+    - name: Publish test results
+      if: always()
+      uses: EnricoMi/publish-unit-test-result-action@v2
+      with:
+        files: test-results/**/*.xml
+        check_name: Test Results
+      continue-on-error: true
+    
+    - name: Comment PR with test results
+      if: github.event_name == 'pull_request' && always()
+      uses: actions/github-script@v7
+      with:
+        script: |
+          const fs = require('fs');
+          const path = require('path');
+          
+          let comment = '## 🧪 Playwright Test Results\n\n';
+          
+          if (fs.existsSync('playwright-report')) {
+            comment += '✅ **HTML Report generated**\n';
+            comment += '📊 You can download the report from the Artifacts section\n';
+          }
+          
+          if (fs.existsSync('screenshots')) {
+            comment += '📸 **Screenshots available** in the Artifacts section\n';
+          }
+          
+          github.rest.issues.createComment({
+            issue_number: context.issue.number,
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            body: comment
+          });
+      continue-on-error: true
+
