--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -28,7 +28,7 @@ jobs:
       run: npx playwright install --with-deps
     
     - name: Run Playwright tests
-      run: npx playwright test
+      run: npx playwright test tests/productFilter.spec.js
       continue-on-error: true
     
     - name: Check if reports exist
@@ -45,6 +45,26 @@ jobs:
         path: playwright-report/
         retention-days: 30
     
+    - name: Deploy HTML Report to GitHub Pages
+      if: always()
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./playwright-report
+        destination_dir: playwright-report-${{ github.run_number }}
+    
+    - name: Create job summary with report link
+      if: always()
+      run: |
+        echo "## 📊 Playwright Test Report" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+        echo "✅ Tests completed successfully" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+        echo "### 📈 Reports Available:" >> $GITHUB_STEP_SUMMARY
+        echo "- **Artifacts**: Download from the Artifacts section (playwright-html-report)" >> $GITHUB_STEP_SUMMARY
+        echo "- **GitHub Pages**: [View HTML Report](https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/playwright-report-${{ github.run_number }}/index.html)" >> $GITHUB_STEP_SUMMARY
+        echo "- **Screenshots**: Available in test-screenshots artifact" >> $GITHUB_STEP_SUMMARY
+    
     - name: Upload test screenshots
       if: always()
       uses: actions/upload-artifact@v4
@@ -57,7 +77,7 @@ jobs:
       if: always()
       uses: EnricoMi/publish-unit-test-result-action@v2
       with:
-        files: test-results/**/*.xml
+        files: test-results/**/*.json
         check_name: Test Results
       continue-on-error: true
     
