--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
     
     - name: Setup Node.js
       uses: actions/setup-node@v4
@@ -45,14 +47,6 @@ jobs:
         path: playwright-report/
         retention-days: 30
     
-    - name: Deploy HTML Report to GitHub Pages
-      if: always()
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./playwright-report
-        destination_dir: playwright-report-${{ github.run_number }}
-    
     - name: Create job summary with report link
       if: always()
       run: |
@@ -61,9 +55,8 @@ jobs:
         echo "✅ Tests completed successfully" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
         echo "### 📈 Reports Available:" >> $GITHUB_STEP_SUMMARY
-        echo "- **Artifacts**: Download from the Artifacts section (playwright-html-report)" >> $GITHUB_STEP_SUMMARY
-        echo "- **GitHub Pages**: [View HTML Report](https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/playwright-report-${{ github.run_number }}/index.html)" >> $GITHUB_STEP_SUMMARY
-        echo "- **Screenshots**: Available in test-screenshots artifact" >> $GITHUB_STEP_SUMMARY
+        echo "- **HTML Report**: Download from Artifacts → playwright-html-report" >> $GITHUB_STEP_SUMMARY
+        echo "- **Screenshots**: Download from Artifacts → test-screenshots" >> $GITHUB_STEP_SUMMARY
     
     - name: Upload test screenshots
       if: always()
